Refactor creation of config request